--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,17 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# Environments 
+.env 
+.venv 
+env/ 
+venv/ 
+ENV/ 
+env.bak/ 
+venv.bak/ 
+django_env
+
+
 # User-specific files
 *.rsuser
 *.suo
