--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,12 @@
-Django>=3.0,<4.0
-psycopg2>=2.8
-django-extensions
-djangorestframework
+asgiref==3.5.0
+backports.zoneinfo==0.2.1
+Django==4.0.2
+django-extensions==3.1.5
+django-filter==21.1
+djangorestframework==3.13.1
+importlib-metadata==4.11.2
+Markdown==3.3.6
+psycopg2-binary==2.9.3
+pytz==2021.3
+sqlparse==0.4.2
+zipp==3.7.0
